<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ContactDetailsActivity"
    tools:showIn="@layout/activity_contact_details"
    android:orientation="vertical"
    android:layout_margin="5dp">
    <LinearLayout
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >
    <TextView
        android:layout_marginRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_contact_name"/>
    <TextView
        android:layout_marginLeft="5dp"
        android:id="@+id/txt_contact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_contact_name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_phone_no"/>
        <TextView
            android:layout_marginLeft="5dp"
            android:id="@+id/txt_phone_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_phone_no"/>
    </LinearLayout>

    <Button
        android:text="@string/bt_send_message"
        android:id="@+id/bt_send_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>